--- a/assets/css/_sample-services.scss
+++ b/assets/css/_sample-services.scss
@@ -28,17 +28,18 @@
 
 .services-title{
 	font-family: $montserrat;
-	font-size: 18px;
+	font-size: 20px;
 	font-weight: 600;
 	letter-spacing: 4px;
 	text-align: left;
+	text-transform: uppercase;;
 	color: $color-white;
 	margin-bottom: 20px;
 }
 
 .services-description{
 	font-family: $lora;
-	font-size: 15px;
+	font-size: 16px;
 	line-height: 1.88;
 	letter-spacing: normal;
 	text-align: left;
