--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -66,7 +66,7 @@ header{
         align-items: center;
 
         li + li{
-            margin-left: 20px;
+            margin-left: 40px;
         }    
     }
 }
@@ -76,9 +76,16 @@ header{
     align-items: center;
 
     li + li{
-        margin-left: 20px;
+        margin-left: 40px;
     }
 }
+
+@media screen and (min-width: $screen-md){
+    .hamburger{
+        display: none;
+    }
+}
+
 
 /*menu mobile*/
 
