--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,11 +8,12 @@
   <nav class="nav-header">
     <ul class="nav-list">
       <li class="nav-item-list"><a href="{{ site.baseurl }}">Home</a></li>
-      <li class="nav-item-list"><a href="{{ site.baseurl }}/servico">Serviços</a></li>
-      <li class="nav-item-list"><a href="{{ site.baseurl }}/portfolio">Portfólio</a></li>
-      <li class="nav-item-list"><a href="{{ site.baseurl }}/depoimentos">Depoimentos</a></li>
+      <li class="nav-item-list"><a href="#services">Serviços</a></li>
+      <li class="nav-item-list"><a href="#portfolio">Portfólio</a></li>
+      <li class="nav-item-list"><a href="#clients">Clientes</a></li>
+      <li class="nav-item-list"><a href="#testimonials">Depoimentos</a></li>
       <li class="nav-item-list"><a href="{{ site.baseurl }}/contato">Contato</a></li>
-      <li class="nav-item-list"><a href="{{ site.baseurl }}/blog">Blog</a></li>
+      <li class="nav-item-list"><a href="#blog">Blog</a></li>
       <li class="nav-item-list"><a href="{{ site.baseurl }}">En</a></li>
     </ul>
   </nav>
