--- a/assets/css/_slick.scss
+++ b/assets/css/_slick.scss
@@ -123,7 +123,14 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin-top: 30px;
+
+    @media screen and (min-width: $screen-md){
+        margin-top: 75px;
+    }
+
+    @media screen and (max-width: $screen-sm-max){
+        margin-top: 30px;
+    }
 
     li + li{
         margin-left: 10px;
