--- a/assets/css/_testimonials.scss
+++ b/assets/css/_testimonials.scss
@@ -1,3 +1,13 @@
+.slider-testimonials{
+	@media screen and (min-width: $screen-md){
+        margin-top: 90px;
+    }
+
+    @media screen and (max-width: $screen-sm-max){
+        margin-top: 0px;
+    }
+}
+
 .box-slider{
 	margin: 0 20px;
 }
