--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -1,7 +1,7 @@
 .footer-map{
 	background: #222222;
-	padding-top: 60px;
-    padding-bottom: 60px;
+	padding-top: 80px;
+    padding-bottom: 80px;
     color: $color-white;
 
 	.container{
@@ -62,7 +62,7 @@
 }
 
 .list-map-site + .list-map-site{
-	margin-left: 50px;
+	margin-left: 80px;
 
 	@media screen and (max-width: $screen-xs-max) {
 		margin-left: 0;
@@ -93,11 +93,11 @@
 	font-family: $montserrat;
 	font-size: 16px;
 	letter-spacing: 1.3px;
-	line-height: 5.63;
+	line-height: 2;
 
-	/*.item-map{
-		margin-bottom: 30px;
-	}*/
+	.item-map{
+		margin-bottom: 13px;
+	}
 }
 
 .logo-map{
@@ -107,6 +107,7 @@
     background-position: center center;
     background-size: contain;
     text-indent: -9999px;
-    width: 93px;
-    height: 40px;
+    width: 110px;
+    height: 47px;
+    margin-bottom: 25px;
 }
