--- a/assets/css/_sample-best-projects.scss
+++ b/assets/css/_sample-best-projects.scss
@@ -56,6 +56,7 @@
 
     .projects{
     	display: grid;
+    	position: relative;
     }
 
     .projects>img {
@@ -68,4 +69,33 @@
 			height: auto;
 		}
 	}
+}
+
+.wrapper-title-projects{
+	background: -webkit-linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.8)); 
+    background: -o-linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.8));
+    background: -moz-linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.8));
+    background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.8)); 
+
+	width: 100%;
+    height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 9;
+	padding: 35px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+
+    .title-project{
+    	font-family: $montserrat;
+    	font-size: 20px;
+    	font-weight: 600;
+    	line-height: 34px;
+    	letter-spacing: 2px;
+    	text-transform: uppercase;
+    	text-align: left;
+    	color: $color-white;
+    }
 }
