--- a/assets/css/_sample-cooperation.scss
+++ b/assets/css/_sample-cooperation.scss
@@ -4,17 +4,14 @@
 
     .cooperation-projects {
     	display: grid;
-    	flex: 0 1 50%;
+    	flex: 0 1 24%;
+        padding: 5px;
+        margin: 1px;
     }
 
     .cooperation-img {
-    	width: 100%;
-	    height: 330px;
-	    object-fit: cover;
-	    display: grid;
-
-        @media only screen and (max-width: $screen-xs-max){
-            height: auto;
-        }
+    	height: auto;
+        object-fit: cover;
+        display: grid;
 	}
 }
