--- a/assets/css/_sample-best-projects.scss
+++ b/assets/css/_sample-best-projects.scss
@@ -38,37 +38,51 @@
 }
 
 .wrapper-projects{
-	display: flex;
-    flex-flow: row wrap;
     margin: 60px 0;
-
-    @media only screen and (max-width: $screen-sm-max){
-		margin: 25px 0;
-	}
-
-    a{
-    	flex: 0 1 33.3%;
-
-    	@media only screen and (max-width: $screen-xs-max){
-			flex: 0 1 50%;
-		}
-    }
+    display: -ms-grid;
+    display: grid;
+    grid-gap: 0;
+    -ms-grid-columns: 33.3% 33.3% 33.3%;
+    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-template-areas: 
+                        'a b c' 
+                        'a d e';
 
     .projects{
-    	display: grid;
     	position: relative;
+        height: 330px;
     }
 
     .projects>img {
     	width: 100%;
-	    height: 330px;
+	    height: 100%;
 	    object-fit: cover;
-	    display: grid;
-
-	    @media only screen and (max-width: $screen-xs-max){
-			height: auto;
-		}
 	}
+}
+
+.wrapper-projects .a .projects{
+    height: 100%;
+}
+
+
+.wrapper-projects>.a{
+    grid-area: a;
+}
+
+.wrapper-projects>.b{
+    grid-area: b;
+}
+
+.wrapper-projects>.c{
+    grid-area: c;
+}
+
+.wrapper-projects>.d{
+    grid-area: d;
+}
+
+.wrapper-projects>.e{
+    grid-area: e;
 }
 
 .wrapper-title-projects{
