blog e outros ajustes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
 	<div class="footer-bottom">
 		<div class="container">
 			<p>&copy; Copyright {{ site.time | date: '%Y' }} {{ site.title }}. Todos os direitos reservados</p>
-			<ul class="list-social-medial">
+			<ul class="list-social-media">
 			    <li class="item-social-media"><a class="i-fb" href="https://www.facebook.com/design.inovacao" target="_blank" class="icon-social-media">Facebook</a></li>
 			    <li class="item-social-media"><a class="i-tw" href="https://twitter.com/giovanaansoain" target="_blank" class="icon-social-media">Twitter</a></li>
 			    <li class="item-social-media"><a class="i-in" href="https://www.linkedin.com/in/giovanaansoain/" target="_blank" class="icon-social-media">Linkedin</a></li>
