--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -14,7 +14,7 @@
 @import "_sample-best-projects";
 @import "_sample-cooperation";
 @import "_testimonials";
-/*@import "_blog";*/
+@import "_blog";
 
 // Definitions
 // @import "main";
