--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
       <li class="nav-item-list"><a href="{{ site.baseurl }}">En</a></li>
     </ul>
   </nav>
-  <ul class="list-social-medial">
+  <ul class="list-social-media">
     <li class="item-social-media"><a class="i-fb" href="https://www.facebook.com/design.inovacao" target="_blank" class="icon-social-media">Facebook</a></li>
     <li class="item-social-media"><a class="i-tw" href="https://twitter.com/giovanaansoain" target="_blank" class="icon-social-media">Twitter</a></li>
     <li class="item-social-media"><a class="i-in" href="https://www.linkedin.com/in/giovanaansoain/" target="_blank" class="icon-social-media">Linkedin</a></li>
