--- a/assets/css/_banner.scss
+++ b/assets/css/_banner.scss
@@ -27,6 +27,10 @@
 	color: $color-white;
 	margin-bottom: 30px;
 
+	@media screen and (min-width: $screen-md) and (max-width: $screen-md-max){
+		font-size: 55px;
+	}
+
 	@media screen and (min-width: $screen-sm) and (max-width: $screen-sm-max){
         font-size: 40px;
     }
@@ -44,7 +48,7 @@
 	color: $color-white;
 	margin-bottom: 45px;
 
-	@media screen and (min-width: $screen-sm) and (max-width: $screen-sm-max){
+	@media screen and (min-width: $screen-sm) and (max-width: $screen-md-max){
         font-size: 18px;
     }
 
@@ -98,8 +102,8 @@
 		text-align: left;
 		color: $color-white;
 
-		@media screen and (max-width: $screen-xs-max){
-			font-size: 13px;
+		@media screen and (max-width: $screen-md-max){
+			font-size: 14px;
 		}
 	}
 }
