--- a/assets/css/_blog.scss
+++ b/assets/css/_blog.scss
@@ -1,2 +1,77 @@
 .blog{
+	background: #f7f7f7;
+}
+
+.wrapper-posts{
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
+.post-card{
+	background: $color-white;
+	width: 330px;
+	/*height: 430px;*/
+
+}
+
+.post-card + .post-card{
+	margin-left: 90px;
+
+	@media screen and (max-width: $screen-md-max){
+		margin-left: 30px;
+	}
+}
+
+.img-post{
+	width: 100%;
+	height: 235px;
+	object-fit: cover;
+}
+
+.post-info{
+	padding: 30px 30px 10px 30px;
+}
+
+.post-category{
+	font-family: $montserrat;
+	font-size: 12px;
+	font-weight: 600;
+	/*line-height: 2.33;*/
+	letter-spacing: 2.4px;
+	color: $color-gray;
+	margin-bottom: 30px;
+	text-transform: uppercase;
+}
+
+.post-title{
+	font-family: $montserrat;
+	font-size: 18px;
+	font-weight: 600;
+	line-height: 1.56;
+	color: $color-title;
+	margin-bottom: 40px;
+}
+
+.post-about{
+	font-family: $montserrat;
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 2;
+	color: #c1c1c1;
+	border-top: 1px solid #e9e9e9;
+	padding-top: 15px;
+	display: inline-flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.post-author{
+	font-family: $montserrat;
+	font-size: 12px;
+	font-weight: 600;
+	line-height: 2.33;
+	letter-spacing: 2.4px;
+	text-transform: uppercase;
+	margin-left: 15px;
 }
