--- a/assets/css/_sample-best-projects.scss
+++ b/assets/css/_sample-best-projects.scss
@@ -50,7 +50,11 @@
 
     .projects{
     	position: relative;
-        height: 330px;
+        height: 480px;
+
+        @media screen and (max-width: $screen-md-max){
+            height: 300px;
+        }
     }
 
     .projects>img {
@@ -61,7 +65,11 @@
 }
 
 .wrapper-projects .a .projects{
-    height: 100%;
+    height: 960px;
+
+    @media screen and (max-width: $screen-md-max){
+        height: 600px;
+    }
 }
 
 
@@ -111,5 +119,10 @@
     	text-transform: uppercase;
     	text-align: left;
     	color: $color-white;
+
+        @media screen and (max-width: $screen-md-max){
+            font-size: 15px;
+            line-height: 27px;
+        }
     }
 }
