--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -1,6 +1,6 @@
 header{
     width: 100%;
-    height: 60px;
+    height: 75px;
     padding: 0 40px;
     position: absolute;
     top: 0;
@@ -10,6 +10,10 @@ header{
     align-items: center;
     justify-content: space-between;
     border-bottom: solid 1px rgba(255, 255, 255, 0.35);
+
+    @media screen and (min-width: $screen-md) and (max-width: $screen-xlg-max){
+        height: 60px;
+    }
 
     @media screen and (max-width: $screen-sm-max){
         height: 40px;
@@ -30,8 +34,13 @@ header{
     .logo{
         display: block;
         @include ir('../img/logo.svg', contain);
-        width: 92px;
-        height: 40px;
+        width: 130px;
+        height: 55px;
+
+        @media screen and (min-width: $screen-md) and (max-width: $screen-xlg-max){
+            width: 92px;
+            height: 40px;
+        }
 
         @media screen and (max-width: $screen-sm-max){
             width: 50px;
@@ -67,16 +76,28 @@ header{
 
         li + li{
             margin-left: 40px;
-        }    
+        } 
     }
+
+    @media screen and (min-width: $screen-md) and (max-width: $screen-md-max){
+        li + li{
+            margin-left: 20px;
+        } 
+    }   
 }
 
-.list-social-medial{
+.list-social-media{
     display: inline-flex;
     align-items: center;
 
     li + li{
         margin-left: 40px;
+    }
+
+    @media screen and (min-width: $screen-md) and (max-width: $screen-md-max){
+        li + li{
+            margin-left: 20px;
+        }
     }
 }
 
