pages about and contact

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       <li class="nav-item-list"><a href="#portfolio">Portfólio</a></li>
       <li class="nav-item-list"><a href="#clients">Clientes</a></li>
       <li class="nav-item-list"><a href="#testimonials">Depoimentos</a></li>
-      <li class="nav-item-list"><a href="{{ site.baseurl }}/contato">Contato</a></li>
+      <li class="nav-item-list"><a href="{{ site.baseurl }}/contact">Contato</a></li>
       <li class="nav-item-list"><a href="#blog">Blog</a></li>
       <li class="nav-item-list"><a href="{{ site.baseurl }}">En</a></li>
     </ul>
