--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -15,10 +15,12 @@
 @import "_sample-cooperation";
 @import "_testimonials";
 @import "_blog";
+@import "call-to-action";
 
 // Definitions
 // @import "main";
 @import "header";
 @import "footer";
-@import "call-to-action";
+@import "about";
+@import "contact";
 // @import "project";
