--- a/assets/css/_banner.scss
+++ b/assets/css/_banner.scss
@@ -11,6 +11,16 @@
 	}
 }
 
+.banner.banner-pages{
+	height: 80%;
+	height: 80vh;
+
+	@media only screen and (max-width: $screen-sm-max){
+		height: 75%;
+		height: 75vh;
+	}
+}
+
 .banner-img{
 	height: 100%;
 	width: 100%;
