--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -4,11 +4,7 @@ html, body {
 }
 
 body {
-  min-height: calc(100vh - 75px);
-
-  @media screen and (min-width: $screen-md) and (max-width: $screen-xlg-max){
-    min-height: calc(100vh - 60px);
-  }
+  min-height: calc(100vh - 60px);
 
   @media screen and (max-width: $screen-sm-max){
     min-height: calc(100vh - 40px);
@@ -76,7 +72,6 @@ section.banner{
 
   @media screen and (min-width: $screen-md) and (max-width: $screen-md-max){
     font-size: 35px;
-    margin-bottom: 20px;
   }
 
   @media only screen and (min-width: $screen-sm) and (max-width: $screen-sm-max){
@@ -118,6 +113,12 @@ section.banner{
   @media screen and (max-width: $screen-xs-max){
     width: 85%;
   }
+}
+
+.paragraph{
+  font-family: $lora;
+  font-size: 18px;
+  line-height: 1.88;
 }
 
 /*buttons*/
