--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -39,3 +39,36 @@
 		}
 	}
 }
+
+.video{
+	width: 100%;
+	height: 80vh;
+	padding: 0;
+	position: relative;
+	overflow: hidden;
+}
+
+.video-poster{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	filter: grayscale(100%);
+}
+
+.wrapper-play-button{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wrapper-play-button>a{
+	display: block;
+	@include ir('../icons/play-button.svg', contain);
+	width: 80px;
+	height: 80px;
+}
