--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 		<title>{{ site.title }} | {{ page.title }}</title>
 
 		<!-- css -->
-		<link href="{{ site.baseurl }}/assets/css/styles.css" rel="stylesheet">
+		<link href="{{ site.baseurl }}assets/css/styles.css" rel="stylesheet">
 
 		<!-- {%- if jekyll.environment == 'production' and site.google_analytics -%}
 		{%- include google-analytics.html -%}
