--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,8 +33,8 @@
 	</div>
 </footer>
 
-<script type="text/javascript" src="{{ site.baseurl }}assets/js/jquery-3.2.0.min.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}assets/js/jquery.mask.min.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}assets/js/jquery.validate.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}assets/js/slick.min.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}assets/js/scripts.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/jquery-3.2.0.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/jquery.mask.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/jquery.validate.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/slick.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/scripts.js"></script>
