--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,7 +1,14 @@
 {% include header.html %}
 
+<!-- banner -->
+{% include project-header.html %}
+<!-- info project -->
+{% include project-info.html %}
+<!-- project -->
 <main class="project-single">
   {{ content }}
 </main>
+<!-- related project -->
+<!-- {% include project-related.html %} -->
 
 {% include footer.html %}
