--- a/assets/css/_project.scss
+++ b/assets/css/_project.scss
@@ -1,32 +1,53 @@
-.project-single {
-    h1 {
-      color: $color__main;
-    }
-}
-.return {
-  display: none;
-}
-@include media-breakpoint-up(lg) {
-    .return {
-        float: left;
-        display: block;
-        margin-left: -100px;
-        margin-top: -10px;
-        a img {
-          height: 38px;
-        }
-    }
+.project-info{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
 }
 
-//Latest Projects Page
-#lastest-projects .project-single {
-    padding: 80px 0;
-    border-bottom: solid 1px $color__light_gray;
-    &:nth-child(2) {
-        padding-top: 0;
+.project-info-item{
+    max-width: 30%;
+}
+
+.project-info-title{
+    font-family: $montserrat;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 6;
+    color: #a7a7a7;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+}
+
+.project-info-text{
+    font-family: $lora;
+    font-size: 18px;
+    line-height: 30px;
+    color: #3d3d3d;
+    text-align: center;
+}
+
+.project-single{
+
+    padding: 0 40px;
+
+    @media screen and (min-width: $screen-sm) and (max-width: $screen-sm-max){
+        padding: 0 15px;
     }
-    &:last-child {
-        padding-bottom: 0;
-        border-bottom: none;
+
+    @media screen and (max-width: $screen-xs-max){
+        padding: 0 10px;
+    }
+    
+    p{
+        font-family: $lora;
+        font-size: 18px;
+        line-height: 30px;
+        color: #3d3d3d;
+        text-align: left;
+
+        img{
+            width: 100%;
+        }
     }
 }
