--- a/_includes/project-banner.html
+++ b/_includes/project-banner.html
@@ -1,9 +1,9 @@
 <section class="banner banner-pages">
-	<img class="banner-img" src="{{ site.baseurl }}/uploads/{{ project.image }}" alt="banner">
+	<img class="banner-img" src="{{ site.baseurl }}/upload/{{ page.image }}" alt="banner">
 	<div class="banner-wrapper-info">
 		<div class="banner-box-center">
-			<h2 class="banner-title">{{ project.title }}</h2>
-			<p class="banner-subtitle">{{ project.subtitle }}</p>
+			<h2 class="banner-title">{{ page.title }}</h2>
+			<p class="banner-subtitle">{{ page.subtitle }}</p>
 		</div>
 		<div class="banner-box-bottom">
 			<a href="mailto:ola@giovana.cc">ola@giovana.cc</a>
