--- a/_includes/project-info.html
+++ b/_includes/project-info.html
@@ -6,11 +6,11 @@
 	</div>
 	<div class="project-info-item">
 		<p class="project-info-title">Cliente</p>
-		<p class="project-info-text">{{ project.client }}</p>
-		<p class="project-info-text">{{ project.city }}</p>
+		<p class="project-info-text">{{ page.client }}</p>
+		<p class="project-info-text">{{ page.city }}</p>
 	</div>
 	<div class="project-info-item">
 		<p class="project-info-title">Data</p>
-		<p class="project-info-text">{{ project.date }}</p>
+		<p class="project-info-text">{{ page.period }}</p>
 	</div>
 </section>
