--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,14 @@
 <header>
-  <h1 ><a class="logo" href="{{ site.baseurl }}">{{ site.title }}</a></h1>
-  <button class="hamburger hamburger--collapse">
-    <span class="hamburger-box">
-      <span class="hamburger-inner"></span>
-    </span>
-  </button>
+  <h1 ><a class="logo" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
   <nav class="nav-header">
     <ul class="nav-list">
-      <li class="nav-item-list"><a href="{{ site.baseurl }}">Home</a></li>
-      <li class="nav-item-list"><a href="#services">Serviços</a></li>
-      <li class="nav-item-list"><a href="#portfolio">Portfólio</a></li>
-      <li class="nav-item-list"><a href="#clients">Clientes</a></li>
-      <li class="nav-item-list"><a href="#testimonials">Depoimentos</a></li>
+      <li class="nav-item-list"><a href="{{ site.baseurl }}/">Home</a></li>
+      <li class="nav-item-list"><a href="{{ site.baseurl }}/#services">Serviços</a></li>
+      <li class="nav-item-list"><a href="{{ site.baseurl }}/#portfolio">Portfólio</a></li>
+      <li class="nav-item-list"><a href="{{ site.baseurl }}/#clients">Clientes</a></li>
+      <li class="nav-item-list"><a href="{{ site.baseurl }}/#testimonials">Depoimentos</a></li>
       <li class="nav-item-list"><a href="{{ site.baseurl }}/contact">Contato</a></li>
-      <li class="nav-item-list"><a href="#blog">Blog</a></li>
+      <li class="nav-item-list"><a href="{{ site.baseurl }}/#blog">Blog</a></li>
       <li class="nav-item-list"><a href="{{ site.baseurl }}">En</a></li>
     </ul>
   </nav>
