--- a/_includes/project-banner.html
+++ b/_includes/project-banner.html
@@ -1,5 +1,5 @@
 <section class="banner banner-pages">
-	<img class="banner-img" src="{{ site.baseurl }}/upload/{{ page.image }}" alt="banner">
+	<img class="banner-img" src="{{ site.baseurl }}upload/{{ page.image }}" alt="banner">
 	<div class="banner-wrapper-info">
 		<div class="banner-box-center">
 			<h2 class="banner-title">{{ page.title }}</h2>
