--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,11 @@
 
 		<title>{{ site.title }} | {{ page.title }}</title>
 
+		<meta name="description" content="{{ site.description }}">
+		<meta name="keywords" content="{{ site.meta_keywords }}">
+
 		<!-- css -->
-		<link href="{{ site.baseurl }}/assets/css/styles.css" rel="stylesheet">
+		<link href="{{ site.baseurl }}assets/css/styles.css" rel="stylesheet">
 
 		<!-- {%- if jekyll.environment == 'production' and site.google_analytics -%}
 		{%- include google-analytics.html -%}
