--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,11 @@
 	<div class="footer-map">
 		<div class="container">
 			<ul class="list-map-site">
-				<li class="item-map logo-map"><a href="">{{ site.title }}</a></li>
+				<li class="item-map logo-map"><a href="{{ site.baseurl }}/">{{ site.title }}</a></li>
 				<li class="item-map"><strong>Buscamos soluções criativas com processo de design para criar inovação.</strong></li>
 			</ul>
 			<ul class="list-map-site">
-				<li class="item-map"><a href="{{ site.baseurl }}home">Home</a></li>
+				<li class="item-map"><a href="{{ site.baseurl }}/">Home</a></li>
 				<li class="item-map"><a href="{{ site.baseurl }}servicos">Serviços</a></li>
 				<li class="item-map"><a href="{{ site.baseurl }}portfolio">Portfólio</a></li>
 				<li class="item-map"><a href="{{ site.baseurl }}depoimentos">Depoimentos</a></li>
