--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <h1 ><a class="logo" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
   <nav class="nav-header">
     <ul class="nav-list">
-      <li class="nav-item-list"><a href="{{ site.baseurl }}">Home</a></li>
+      <li class="nav-item-list"><a href="{{ site.baseurl }}/">Home</a></li>
       <li class="nav-item-list"><a href="{{ site.baseurl }}#services">Serviços</a></li>
       <li class="nav-item-list"><a href="{{ site.baseurl }}#portfolio">Portfólio</a></li>
       <li class="nav-item-list"><a href="{{ site.baseurl }}#clients">Clientes</a></li>
