--- a/assets/css/_sample-cooperation.scss
+++ b/assets/css/_sample-cooperation.scss
@@ -8,6 +8,10 @@
     	flex: 0 1 24%;
         padding: 5px;
         margin: 1px;
+
+        @media screen and (max-width: $screen-xs-max){
+            flex: 0 1 49%;
+        }
     }
 
     .cooperation-img {
