--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -1,30 +1,33 @@
 header{
-    width: 100%;
-    height: 60px;
-    padding: 0 40px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 99;
-    display: inline-flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: solid 1px rgba(255, 255, 255, 0.35);
 
-    @media screen and (max-width: $screen-sm-max){
-        height: 40px;
+    @media screen and (min-width: $screen-md){
+        width: 100%;
+        height: 60px;
+        padding: 0 40px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 99;
+        display: inline-flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: solid 1px rgba(255, 255, 255, 0.35); 
     }
 
-    @media screen and (min-width: $screen-sm) and (max-width: $screen-sm-max){
-        padding: 0 15px;
-    }
-
-    @media screen and (max-width: $screen-xs-max){
-        padding: 0 10px;
+    @media screen and (max-width: $screen-sm-max){  
+        background: $color-white;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        padding: 30px 20px;
     }
 
     h1{
         margin: 0;
+
+        @media screen and (max-width: $screen-sm-max){
+            width: 100%;
+        }
     }
 
     .logo{
@@ -34,8 +37,9 @@ header{
         height: 40px;
 
         @media screen and (max-width: $screen-sm-max){
-            width: 50px;
-            height: 25px;
+            width: 100%;
+            height: 50px;
+            filter: invert(100%);
         }
     }
 
@@ -44,11 +48,12 @@ header{
         font-size: 13px;
         font-weight: normal;
         letter-spacing: 1px;
-        text-transform: uppercase;;
+        text-transform: uppercase;
         color: $color-white;
 
         @media screen and (max-width: $screen-sm-max){
-            font-size: 15px;
+            color: $color-black;
+            margin: 10px 0;
         }
     }
 
@@ -74,7 +79,15 @@ header{
         li + li{
             margin-left: 20px;
         } 
-    }   
+    } 
+
+    @media screen and (max-width: $screen-sm-max){
+        width: 80%;
+        margin: 20px auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }  
 }
 
 .list-social-media{
@@ -90,142 +103,38 @@ header{
             margin-left: 20px;
         }
     }
-}
 
-@media screen and (min-width: $screen-md){
-    .hamburger{
-        display: none;
+    @media screen and (max-width: $screen-sm-max){  
+        width: 100%;
+        justify-content: center;
     }
 }
 
-
-/*menu mobile*/
 
 @media screen and (max-width: $screen-sm-max){
+    header{
 
-    .hamburger {
-        /*display: inline-block;*/
-        display: flex;
-        cursor: pointer;
-        transition-property: opacity, filter;
-        transition-duration: .15s;
-        transition-timing-function: linear;
-        font: inherit;
-        color: inherit;
-        text-transform: none;
-        background-color: transparent;
-        border: 0;
+        .list-social-media{
+            width: 100%;
+            justify-content: center;
+        }
+
+        .item-social-media>a{
+            filter: inherit;
+        }
+    }
+
+    .nav-item-list:after {
+        margin: 15px;
+        content: "|";
+        font-family: $montserrat;
+        font-size: 13px;
+        color: $color-black;
+    }
+
+    .nav-item-list:last-child:after {
+        content:"";
         margin: 0;
-        overflow: visible;
-    }
-
-    .hamburger-box {
-        width: 25px;
-        height: 19px;
-        display: inline-block;
-        position: relative;
-    }
-
-    .hamburger--collapse .hamburger-inner {
-        top: auto;
-        bottom: 0;
-        transition-duration: 0.15s;
-        transition-delay: 0.15s;
-        transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-    }
-
-    .hamburger-inner {
-        display: block;
-        top: 50%;
-        margin-top: -2px;
-    }
-
-    .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-        width: 25px;
-        height: 2px;
-        background-color: rgba(255, 255, 255, 0.71);
-        border-radius: 2px;
-        position: absolute;
-        transition-property: transform;
-        transition-duration: 0.15s;
-        transition-timing-function: ease;
-    }
-
-    .hamburger-inner::before {
-        top: -8px;
-    }
-
-    .hamburger-inner::after {
-        bottom: -10px;
-    }
-
-    .hamburger-inner::before, .hamburger-inner::after {
-        content: "";
-        display: block;
-    }
-
-    .hamburger--collapse .hamburger-inner::before {
-        transition: top 0.12s 0.3s cubic-bezier(0.33333, 0.66667, 0.66667, 1),transform 0.15s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-    }
-
-    .hamburger--collapse .hamburger-inner::after {
-        top: -16px;
-        transition: top 0.3s 0.3s cubic-bezier(0.33333, 0.66667, 0.66667, 1),opacity 0.1s linear;
-    }
-
-    .nav-header{
-        overflow: hidden;
-        position: fixed;
-        right: -100%;
-        width: 80%;
-        height: 100%;
-        z-index: 99;
-        top: 40px;
-        padding-top: 20px;
-        background: rgba(0, 0, 0, 0.92);
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-        transition: right cubic-bezier(0.55, 0.085, 0, 0.99) 0.7s;
-
-        .nav-list{
-            text-align: center;
-            height: 90%;
-            overflow-y: auto;
-        }
-
-        .nav-item-list{
-            padding: 10px 0;
-
-            a{
-                width: 100%;
-                display: block;
-                padding: 10px 0;
-            }
-        }
-    }
-
-    header.is-expanded{
-        .nav-header{
-            right: 0;
-            transition: right cubic-bezier(0.55, 0.085, 0, 0.99) 0.7s;
-        }
-
-        .hamburger--collapse .hamburger-inner {
-            transform: translate3d(0, -10px, 0) rotate(-45deg);
-            transition-delay: 0.32s;
-            transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-        }
-
-        .hamburger--collapse .hamburger-inner::before {
-            top: 0;
-            transform: rotate(-90deg);
-            transition: top 0.12s 0.18s cubic-bezier(0.33333, 0, 0.66667, 0.33333),transform 0.15s 0.42s cubic-bezier(0.215, 0.61, 0.355, 1);
-        }
-
-        .hamburger--collapse .hamburger-inner::after {
-            top: 0;
-            opacity: 0;
-            transition: top 0.3s cubic-bezier(0.33333, 0, 0.66667, 0.33333),opacity 0.1s 0.27s linear;
-        }
     }
 }
+
