--- a/assets/css/_banner.scss
+++ b/assets/css/_banner.scss
@@ -5,7 +5,7 @@
 	background: $color-black;
 	position: relative;
 
-	@media only screen and (max-width: $screen-sm-max){
+	@media screen and (max-width: $screen-sm-max){
 		height: 85%;
 		height: 85vh;
 	}
@@ -15,7 +15,7 @@
 	height: 80%;
 	height: 80vh;
 
-	@media only screen and (max-width: $screen-sm-max){
+	@media screen and (max-width: $screen-sm-max){
 		height: 75%;
 		height: 75vh;
 	}
@@ -125,6 +125,9 @@
 	}
 }
 
-.banner .btn-primary, .banner .btn-secondary{
-	width: 148px;
+@media screen and (max-width: $screen-xs-max){
+	
+	.banner .btn-primary, .banner .btn-secondary{
+		width: 148px;
+	}
 }
