--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,15 @@
 		<meta name="description" content="{{ site.description }}">
 		<meta name="keywords" content="{{ site.meta_keywords }}">
 
+		<!-- favicon -->
+		<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}assets/img/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}assets/img/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}assets/img/favicon/favicon-16x16.png">
+		<link rel="manifest" href="{{ site.baseurl }}assets/img/favicon/site.webmanifest">
+		<link rel="mask-icon" href="{{ site.baseurl }}assets/img/favicon/safari-pinned-tab.svg" color="#db2c1f">
+		<meta name="msapplication-TileColor" content="#db2c1f">
+		<meta name="theme-color" content="#ffffff">
+
 		<!-- css -->
 		<link href="{{ site.baseurl }}assets/css/styles.css" rel="stylesheet">
 
