--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
       <li class="nav-item-list"><a href=".{{ site.baseurl }}/#testimonials">Depoimentos</a></li>
       <li class="nav-item-list"><a href=".{{ site.baseurl }}contact">Contato</a></li>
       <li class="nav-item-list"><a href=".{{ site.baseurl }}/#blog">Blog</a></li>
-      <li class="nav-item-list"><a href=".{{ site.baseurl }}/">En</a></li>
+      <!-- <li class="nav-item-list"><a href=".{{ site.baseurl }}/">En</a></li> -->
     </ul>
   </nav>
   <ul class="list-social-media">
