--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -46,14 +46,9 @@ section{
   padding-top: 120px;
   padding-bottom: 120px;
 
-  @media screen and (min-width: $screen-md) and (max-width: $screen-md-max){
+  @media screen and (max-width: $screen-md-max){
     padding-top: 60px;
     padding-bottom: 60px;
-  }
-
-  @media only screen and (max-width: $screen-sm-max){
-    padding-top: 40px;
-    padding-bottom: 40px;
   }
 }
 
@@ -92,7 +87,7 @@ section.banner{
   line-height: 1.75;
   text-align: center;
   color: $color-subtitle;
-  margin: 0 auto 40px auto;
+  margin: 0 auto 50px auto;
 
   @media screen and (min-width: $screen-md) and (max-width: $screen-md-max){
       font-size: 16px;
@@ -132,9 +127,9 @@ section.banner{
   text-align: center;
   text-transform: uppercase;
   color: $color-white;
-  width: 190px;
-  height: 40px;
-  padding: 10px 0;
+  width: 205px;
+  height: 45px;
+  padding: 14px 0;
   border-bottom-left-radius: 40px;
   border-top-left-radius: 40px;
   border-bottom-right-radius: 40px;
@@ -144,6 +139,7 @@ section.banner{
     font-size: 13px;
     letter-spacing: 2.8px;
     width: 160px;
+    height: 40px;
     padding: 12px 0;
   }
 }
@@ -159,8 +155,14 @@ section.banner{
 
 .btn-cta{
   background: #df4236;
-  margin-top: 20px;
-  box-shadow: 2px 4px 10px #b5241a;
+  box-shadow: 2px 10px 9px #b5241a;
+  transition: 0.3s;
+
+  &:hover{
+    margin-top: 2px;
+    box-shadow: 2px 3px 9px #b5241a;
+    transition: 0.3s;
+  }
 }
 
 .wrapper-btn-scroll{
@@ -189,8 +191,8 @@ section.banner{
 
 .icon-scroll{
   @include ir('../icons/mouse.svg', cover);
-  width: 17px;
-  height: 17px;
+  width: 22px;
+  height: 22px;
   display: inline-block;
   filter: invert(100%);
 }
