--- a/assets/css/_sample-cooperation.scss
+++ b/assets/css/_sample-cooperation.scss
@@ -5,7 +5,7 @@
 
     .cooperation-projects {
     	display: grid;
-    	flex: 0 1 24%;
+    	flex: 0 1 20%;
         padding: 5px;
         margin: 1px;
 
@@ -19,5 +19,9 @@
     	height: 190px;
         object-fit: cover;
         display: grid;
+
+        @media only screen and (max-width: $screen-sm-max){
+            height: 140px;
+        }
 	}
 }
