--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -1,5 +1,5 @@
 header{
-
+    
     @media screen and (min-width: $screen-md){
         width: 100%;
         height: 60px;
@@ -14,11 +14,16 @@ header{
         border-bottom: solid 1px rgba(255, 255, 255, 0.35); 
     }
 
+    @media screen and (min-width: $screen-lg){
+        height: 70px;
+    }
+
     @media screen and (max-width: $screen-sm-max){  
         background: $color-white;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
+        justify-content: center;
         padding: 30px 20px;
     }
 
@@ -124,6 +129,15 @@ header{
         }
     }
 
+    .nav-header{
+        width: 100%;
+    }
+
+    .nav-list{
+        width: 100%;
+        margin: 40px 0;
+    }
+
     .nav-item-list:after {
         margin: 15px;
         content: "|";
@@ -134,6 +148,18 @@ header{
 
     .nav-item-list:last-child:after {
         content:"";
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: $screen-xs-max){
+
+    .nav-header{
+        width: 300px;
+    }
+
+    .nav-item-list:nth-child(3):after, .nav-item-list:nth-child(5):after{
+        content: "";
         margin: 0;
     }
 }
