--- a/_includes/project-info.html
+++ b/_includes/project-info.html
@@ -1,8 +1,11 @@
 <section class="project-info container">
 	<div class="project-info-item">
 		<p class="project-info-title">Categoria</p>
-		<p class="project-info-text">Branding</p>
-		<p class="project-info-text">Digital</p>
+		{% for tag in page.tags %}
+			<p class="project-info-text">{{ tag }}</p>
+		{% endfor %}
+		<!-- <p class="project-info-text">Branding</p>
+		<p class="project-info-text">Digital</p> -->
 	</div>
 	<div class="project-info-item">
 		<p class="project-info-title">Cliente</p>
