--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -182,27 +182,14 @@
 span.error{
     font-size: 10px;
     color: red;
-    bottom: -20px;
-    left: 0px;
     display: block;
+    font-family: $montserrat;
 }
 
-.success{
-    position: absolute;
-    width: 100%;
-    height: 90%;
-    padding: 30px 35px;
-    background: #FFF;
-    display: none;
-
-    p{
-        width: 96%;
-        color: #808080;
-        font-size: 20px;
-        line-height: 30px;
-        opacity: 1;
-        text-align: center;
-        position: absolute;
-        top: 45%;
-    }
+.form> .retorno{
+    font-family: $montserrat;
+    font-size: 18px;
+    font-style: italic;
+    line-height: 30px;
+    text-align: right;
 }
