--- a/assets/css/_sample-cooperation.scss
+++ b/assets/css/_sample-cooperation.scss
@@ -17,8 +17,9 @@
     .cooperation-img {
         width: 100%;
     	height: 190px;
-        object-fit: cover;
+        object-fit: contain;
         display: grid;
+        filter: grayscale(100%);
 
         @media only screen and (max-width: $screen-sm-max){
             height: 140px;
