--- a/assets/css/_reset.scss
+++ b/assets/css/_reset.scss
@@ -55,10 +55,10 @@ a {
 	cursor: pointer;
 }
 
-ul {
+/*ul {
 	list-style: none;
 	list-style-position: inside;
-}
+}*/
 
 blockquote, q {
 	quotes: none;
