--- a/assets/css/_sample-best-projects.scss
+++ b/assets/css/_sample-best-projects.scss
@@ -4,6 +4,8 @@
 
 .list-filter-projects{
 	display: inline-flex;
+    list-style: none;
+    list-style-position: inside;
 
 	@media screen and (max-width: $screen-xs-max){
       flex-wrap: wrap;
@@ -82,8 +84,6 @@
 
 @media screen and (min-width: $screen-md){
     .wrapper-projects>a{
-        height: 300px;
-        width: 33.34vw;
         flex: 1 1 33.33%;
     }
 }
