troca da font lora

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -11,7 +11,7 @@
   {{ content }}
 </section>
 <!-- related project -->
-<section class="related-projects">
+<!-- <section class="related-projects">
     <div class="wrapper-related-project">
 		<h4 class="section-title">Projetos relacionados</h4>
 		{% assign maxRelatedCounter  = 0 %}
@@ -35,12 +35,8 @@
 	            {% endif %}
 	        {% endif %}
 	    {% endfor %}
-		</div>
-				
-
-		    	
-
+		</div>   	
 	</div>
-</section>
+</section> -->
 
 {% include footer.html %}
