--- a/assets/css/_banner.scss
+++ b/assets/css/_banner.scss
@@ -51,7 +51,7 @@
 }
 
 .banner-subtitle{
-	font-family: $lora;
+	font-family: $garamond;
 	font-size: 22px;
 	line-height: normal;
 	text-align: center;
