--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -82,7 +82,7 @@ section.banner{
 }
 
 .section-subtitle{
-  font-family: $lora;
+  font-family: $garamond;
   font-size: 20px;
   line-height: 1.75;
   text-align: center;
@@ -111,7 +111,7 @@ section.banner{
 }
 
 .paragraph{
-  font-family: $lora;
+  font-family: $garamond;
   font-size: 18px;
   line-height: 1.88;
 }
