--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -95,7 +95,7 @@
 }
 
 .mod-label{
-	font-family: $lora;
+	font-family: $garamond;
     font-size: 18px;
 	color: #a7a7a7;
 }
@@ -103,7 +103,7 @@
 .mod-textarea{
     position: relative;
     width: 100%;
-    font-family: $lora;
+    font-family: $garamond;
     font-size: 18px;
     line-height: 2.2;
     border: none;
@@ -137,7 +137,7 @@
 }
 
 .mod-input{
-	font-family: $lora;
+	font-family: $garamond;
     width: 100%;
     font-size: 18px;
     line-height: 2.2;
