--- a/assets/css/_project.scss
+++ b/assets/css/_project.scss
@@ -1,6 +1,6 @@
 .project-single{
     p{
-        font-family: $lora;
+        font-family: $garamond;
         font-size: 18px;
         line-height: 30px;
         color: #3d3d3d;
@@ -71,7 +71,7 @@
 }
 
 .project-info-text{
-    font-family: $lora;
+    font-family: $garamond;
     font-size: 18px;
     line-height: 30px;
     color: #3d3d3d;
