--- a/assets/css/_sample-services.scss
+++ b/assets/css/_sample-services.scss
@@ -39,7 +39,7 @@
 }
 
 .services-description{
-	font-family: $lora;
+	font-family: $garamond;
 	font-size: 16px;
 	line-height: 1.88;
 	letter-spacing: normal;
