--- a/assets/css/_testimonials.scss
+++ b/assets/css/_testimonials.scss
@@ -45,7 +45,7 @@
 }
 
 .text-slider{
-	font-family: $lora;
+	font-family: $garamond;
 	font-size: 16px;
 	line-height: 1.6;
 
@@ -66,7 +66,7 @@
 
 span.space-text{
 	margin: 0 5px;
-	font-family: $lora;
+	font-family: $garamond;
 	font-size: 13px;
 	display: flex;
 	align-items: center;
@@ -82,7 +82,7 @@ span.space-text{
 }
 
 .info-role{
-	font-family: $lora;
+	font-family: $garamond;
 	font-size: 16px;
 	font-weight: normal;
 	font-style: italic;
