--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -8,3 +8,4 @@ $color-title: #3e3e3e;
 $color-subtitle: #4b4b4b;
 $montserrat: 'Montserrat', sans-serif;
 $lora: 'Lora', sans-serif;
+$garamond: 'Garamond', sans-serif;
