--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -88,7 +88,7 @@
 }
 
 .list-map-site:nth-child(1){
-	font-family: $lora;
+	font-family: $garamond;
 	font-size: 16px;
 	line-height: 1.63;
 	color: #fefefe;
