--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,9 @@
 		</div>
 	</div>
 </footer>
-
+<script>
+	var GLOBAL_URL = "{{ site.baseurl }}";
+</script>
 <script type="text/javascript" src="{{ site.baseurl }}assets/js/jquery-3.2.0.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}assets/js/jquery.mask.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}assets/js/jquery.validate.js"></script>
