--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,16 +11,16 @@
 		<meta name="keywords" content="{{ site.meta_keywords }}">
 
 		<!-- favicon -->
-		<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}assets/img/favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}assets/img/favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}assets/img/favicon/favicon-16x16.png">
-		<link rel="manifest" href="{{ site.baseurl }}assets/img/favicon/site.webmanifest">
-		<link rel="mask-icon" href="{{ site.baseurl }}assets/img/favicon/safari-pinned-tab.svg" color="#db2c1f">
+		<link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}assets/img/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="{{ site.url }}assets/img/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="{{ site.url }}assets/img/favicon/favicon-16x16.png">
+		<link rel="manifest" href="{{ site.url }}assets/img/favicon/site.webmanifest">
+		<link rel="mask-icon" href="{{ site.url }}assets/img/favicon/safari-pinned-tab.svg" color="#db2c1f">
 		<meta name="msapplication-TileColor" content="#db2c1f">
 		<meta name="theme-color" content="#ffffff">
 
 		<!-- css -->
-		<link href="{{ site.baseurl }}assets/css/styles.css" rel="stylesheet">
+		<link href="{{ site.url }}assets/css/styles.css" rel="stylesheet">
 
 		<!-- {%- if jekyll.environment == 'production' and site.google_analytics -%}
 		{%- include google-analytics.html -%}
